--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "apexcharts": "^3.46.0",
+    "express": "^5.1.0",
+    "lucide-react": "^0.537.0",
+    "mongodb": "4.0",
+    "mongoose": "^8.17.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
