--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# vercel
-.vercel
+# env files (can opt-in for committing if needed)
+.env*
 
 # typescript
 *.tsbuildinfo
